<resources>
    <string name="app_name">Book Store</string>

    <string name="insert_book">Insert Book Data</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No books have been found...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Don\'t forget to add a book!</string>

    <!--Title for the activity to edit an existing book [CHAR LIMIT =20] -->
    <string name="editor_activity_title_edit_book">Edit book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">book updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->

    <string name="editor_delete_book_successful">book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for the book's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>

    <!-- Label for the book's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="Continue">Continue</string>


    <string name="add_email">Add Email</string>
    <string name="continue_selected">Ignore</string>
    <string name="email_missing">Email Missing</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number_missing">Phone Number Missing</string>
    <string name="email_missing_add">Email Missing, Add Email</string>
    <string name="phone_missing_add">Phone Missing, Add Phone</string>
    <string name="book_updated">Book Updated!</string>
    <string name="error_updating_book">Error Updating Book</string>
    <string name="error_saving_book">Error Saving Book</string>
    <string name="successfully_saved">Book Successfully Saved!</string>
    <string name="inventory_cant_less_than">Inventory Can\'t Be Less Than 0</string>
    <string name="add_book">Add a Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="place_order">Place Order</string>
    <string name="out_of_stock">Out of Stock, Update Inventory!</string>
    <string name="book_overview">Book Overview</string>
    <string name="book_title">Book Title</string>
    <string name="editor_supplier">Supplier</string>
    <string name="price_edit">Price: $</string>
    <string name="edit_quantity">Quantity</string>
    <string name="minus"> - </string>
    <string name="plus"> + </string>
    <string name="zero"> 0 </string>
    <string name="phone_number">Phone Number</string>
    <string name="number_hint"> 123-456-7890</string>
    <string name="email_addy">Email Address</string>
    <string name="email_hint">email@something.com</string>
    <string name="list_quantity">Quantity: </string>
    <string name="purchase">Purchase Book </string>
    <string name="insert_dummy">Insert Dummy Data</string>
    <string name="delete_all">Delete All Books</string>
    <string name="title_needed">Must have title!</string>
    <string name="supplier_needed">Must include supplier!</string>
    <string name="price_needed">Price is necessary!</string>
    <string name="quantity_needed">Quantity can\t be 0!</string>
    <string name="order_contact_needed">Contact info needed, contact information can be updated at time of purchase.</string>
</resources>
